Подправить сортировку и фильтрацию, добавить удаление сотрудников
подправлен старый код
фильтрация по нажатию клавиши(раньше Enter)
добавлена возможность удаления

подправлены стили

--- a/main.css
+++ b/main.css
@@ -2,12 +2,14 @@
     display: block;
 }
 
-.button {
+.delButton {
     height: auto;
     color: black;
+    border: 0;
 }
 
-.button:hover {
+.delButton:hover {
     background-color: brown;
     color: white;
+    border-radius: 5px;
 }
